# SVI-1-

./: .gitignore  Q_test.docx  README.md  api_test_script.py  app.py  chatbot.py  cli_testing.py  company_data.json  db.py  flight_bot_data.json  flight_data.json  langchain_utils.py  process_data.py  process_flight_data.py  pyproject.toml  query_gemma.py  rag_with_gemma.py  rag_with_groq.py  requirements.txt  retriever.py  schengen-visa-rag-chatbot-lld.puml  server_langchain.py  test_Qdrant.py  test_conversational_memory.py
Qdrant/: requirements.txt
Qdrant/api/: dependencies.py  main.py  models.py  routes.py
Qdrant/document_pipeline/: __init__.py  embedding.py  processor.py  qdrant_manager.py  storage.py
data/: flight_data.json  hotel_data.json
design/: HLD.drawio  LLD2.puml
logs/: relevance_logs.csv  relevance_logs.jsonl
src/: main.py  models.py
src/auth/: __init__.py  service.py
src/vector/: chroma_db_client.py  reranker.py  vector_retriever.py
streamlit_frontend/: app.py  chatbot.py  flight_bot_data.json
test_api/: groq_utils.py  server_groq.py  server_orchestrated.py  test_ambiguity.py  test_groq.py
test_api/logs/: orchestrated_logs.csv  orchestrated_logs.jsonl
testing_mechanism/: dataset.json
testing_mechanism/configs/: langsmith_config.py
testing_mechanism/tests/: test_dataset.json  test_groq_rag.py  test_ollama_rag.py
