[project]
name = "svi-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "chromadb==1.2.1",
    "fastapi==0.121.0",
    "groq>=0.36.0",
    "numpy==2.3.4",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "requests==2.32.5",
    "sentence-transformers==5.1.1",
    "sqlalchemy==2.0.44",
    "streamlit==1.51.0",
    "torch==2.9.0",
    "transformers==4.57.1",
]
